--- a/pages/css/account.css
+++ b/pages/css/account.css
@@ -34,6 +34,10 @@
   padding: 20px;
 }
 
+.createAccount .Login .orangeButton {
+  margin: 5px 0 0 20px;
+}
+
 .createAccount .Login .actionLabel {
   margin-left: 5px;
 }
