Factored ItemBox into ClickBox and ItemBox, moved ItemBox into client.item. Now nothing in client.ui depends on anything other than client.util, client.shell and client.images.
Soon the same will be able to be said for client.util and client.shell
(client.images is fortunately already blissfully free of spaghetti).

--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -1077,27 +1077,21 @@ img, embed, applet, object {
   width: 300px;
 }
 
-.itemBox {
+.clickBox {
   border: 1px solid #CCCCCC;
   margin: 5px;
   padding: 5px; /* TODO: IE won't like */
 }
 
-.itemBox .Name, .itemBox .Creator {
+.clickBox .Label {
   white-space: nowrap;
   width: 110px;
   overflow: hidden;
 }
 
-.itemBox .Name {
+.clickBox .Name {
   font-size: 14px;
   padding-top: 5px;
-}
-
-.itemBox .Creator {
-  font-size: 12px;
-  padding-top: 2px;
-  color: #AABDC8;
 }
 
 .stuffNaviBar {
