More split client progress. Now we can display the mail page inside the top-level frame and everything looks amazingly proper. Also started cleaning up our CSS since we'll soon be back in a happy land where each page only sees its own CSS instead of a giant amalgamation of the amazing four hundred billion styles.

--- a/pages/css/item.css
+++ b/pages/css/item.css
@@ -4,6 +4,43 @@
  * CSS styles for the (shared) Item interfaces.
  */
 
+.itemThumbnail {
+  padding-left: 5px;
+  width: 80px;
+}
+
+.itemThumbnail .Image {
+  height: 60px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.itemThumbnail .Text {
+  font-size: small;
+  text-align: center;
+}
+
+.ratingText {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.stuffNaviBar {
+  background-image: url(/images/me/stuff_bg.png);
+}
+
+.stuffNaviBar .Link {
+  width: 64px;
+}
+
+.stuffNaviBar .Label {
+  background-image: none;
+  text-align: center;
+  font-weight: bold;
+  color: #FFFFFF;
+  height: 25px;
+}
+
 .tagCloud {
   background: url(/images/item/top_tags.png) no-repeat top;
   font-size: 12px;
