- New scale button skin from Bill, just one state. Mkay. - Allow furni and toys to be scaled in the testing viewer.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -423,6 +423,13 @@ TabNavigator, TabBar {
   disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_zoom_disabled.png");
 }
 
+.controlBarButtonScale {
+  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
+  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
+  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
+  disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
+}
+
 .controlBarHoverZone {
   disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/hoverzone.png");
 }
