Updated the templates.

--- a/src/java/com/threerings/msoy/item/server/persist/TemplateCatalogRecord.tmpl
+++ b/src/java/com/threerings/msoy/item/server/persist/TemplateCatalogRecord.tmpl
@@ -9,7 +9,7 @@ import com.samskivert.jdbc.depot.expression.ColumnExp;
 
 /** Catalog Records for Templates. */
 @TableGenerator(name="catalogId", pkColumnValue="TEMPLATE_CATALOG")
-public class TemplateCatalogRecord extends CatalogRecord<TemplateRecord>
+public class TemplateCatalogRecord extends CatalogRecord
 {
     // AUTO-GENERATED: FIELDS START
     /** The qualified column identifier for the {@link #catalogId} field. */
