--- a/src/java/com/threerings/msoy/item/server/persist/TemplateRatingRecord.tmpl
+++ b/src/java/com/threerings/msoy/item/server/persist/TemplateRatingRecord.tmpl
@@ -7,7 +7,7 @@ import com.samskivert.jdbc.depot.Key;
 import com.samskivert.jdbc.depot.expression.ColumnExp;
 
 /** Rating records for Templates. */
-public class TemplateRatingRecord extends RatingRecord<TemplateRecord>
+public class TemplateRatingRecord extends RatingRecord
 {
     // AUTO-GENERATED: FIELDS START
     /** The qualified column identifier for the {@link #itemId} field. */
