--- a/src/java/com/threerings/msoy/item/server/persist/TemplateCloneRecord.tmpl
+++ b/src/java/com/threerings/msoy/item/server/persist/TemplateCloneRecord.tmpl
@@ -10,7 +10,7 @@ import com.samskivert.jdbc.depot.expression.ColumnExp;
 
 /** Clone records for Templates. */
 @TableGenerator(name="cloneId", pkColumnValue="TEMPLATE_CLONE")
-public class TemplateCloneRecord extends CloneRecord<TemplateRecord>
+public class TemplateCloneRecord extends CloneRecord
 {
     // AUTO-GENERATED: FIELDS START
     /** The qualified column identifier for the {@link #itemId} field. */
