Fix some comment spelling.  Also, this is an excuse to note that I did in fact have an old copy of DeploymentConfig sitting in the wrong package - other eclipse users should look for one in msoy.web.client and blow it away if its there, so they can avoid using the wrong import by accident like I did.

--- a/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
+++ b/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
@@ -8,7 +8,7 @@ package com.threerings.msoy.data.all;
  */
 public class DeploymentConfig
 {
-    /** A prefix used to access media proxied throug the game server. */
+    /** A prefix used to access media proxied through the game server. */
     public static final String PROXY_PREFIX = "/remedia/";
 
     /** The time at which the client was built. */
