More split client progress.

--- a/pages/css/frame.css
+++ b/pages/css/frame.css
@@ -98,9 +98,9 @@
 }
 
 .pageIFrame {
-  width: 100%;
   height: 100%;
   border: none;
+  background: #FFFFFF;
 }
 
 /* ------------------------------------
