Moved shop's Marquee up to client.ui.  Someday I'll get over how cool Eclipse's refactoring tools are, but today is not that day.  I had to check the svn status of src/gwt to even find out what pages were potentially affected by the move, to make sure they got the moved bits correctly.  That's so awesome.
Also, added a marquee to the (still mostly empty) passport page.

--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -893,3 +893,14 @@ img, embed, applet, object {
 .searchBox .closeButton {
   margin-top: 3px;
 }
+
+.marquee {
+  background: url(/images/ui/marquee_tile.png) repeat-x top;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  height: 38px;
+  text-align: center;
+  padding-top: 8px;
+}
