--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1226,6 +1226,21 @@ BasePanel {
 .friendsListPanel {
   titleBackgroundSkin: Embed(source="../../rsrc/media/skins/friends_popup_header.png",
           scaleGridTop="8", scaleGridBottom="28",
+          scaleGridLeft="8", scaleGridRight="211");
+  headerHeight: 36;
+  backgroundColor: black;
+  backgroundAlpha: 0.8;
+  backgroundImage: null;
+  paddingTop: 0;
+  paddingBottom: 0;
+  paddingLeft: 0;
+  paddingRight: 0;
+  verticalGap: 0;
+}
+
+.partyPopup { /** TODO: probably: remove */
+  titleBackgroundSkin: Embed(source="../../rsrc/media/skins/friends_popup_header.png",
+          scaleGridTop="8", scaleGridBottom="28",
           scaleGridLeft="8", scaleGridRight="315");
   headerHeight: 36;
   backgroundColor: black;
