In all the time I've spent in Flex-land in the last few months, I somehow managed to forget that browser layout can be at least as big a pain in the ass as Flex layout.  How did I forget that? I have no idea... but it has been brought back to me with stunning clarity.

--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -187,4 +187,18 @@
   background-image: url(/images/me/passport_header_bg.jpg);
   height: 252px;
   width: 678px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
+.passport .NextPanel .Description {
+  padding-top: 10px;
+  padding-right: 10px;
+  font-size: 13px;
+}
+
+.passport .NextPanel .Icon {
+  padding-top: 10px;
+  padding-right: 10px;
 }
