There seems to be no ideal way to limit the title width (ideally it would be squished into whatever space was left over from the subnavigation). So let's split the difference and limit it to something that "reasonable" subnavigation will not cause to freak out.

--- a/pages/css/frame.css
+++ b/pages/css/frame.css
@@ -113,10 +113,10 @@
   height: 34px;
   color: white;
   white-space: nowrap;
+  max-width: 400px;
+  overflow: hidden;
   opacity: 0.6; /* Firefox and Safari */
   filter: alpha(opacity=60); /* IE */
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .pageTitle .SubNavi {
