vertical-align must be middle not center and there's no such thing as horizontal-align AFAIK.

--- a/pages/css/landing.css
+++ b/pages/css/landing.css
@@ -163,7 +163,7 @@
   float: left;
   width: 55px;
   text-align: center;
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 .LandingPanel .TopGamesPanel .GameListItem .Name,
