--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1290,6 +1290,12 @@ BasePanel {
   downSkin: Embed(source="../../rsrc/media/skins/button/copy_down.png");
 }
 
+.sendButton {
+  upSkin: Embed(source="../../rsrc/media/skins/button/send.png");
+  overSkin: Embed(source="../../rsrc/media/skins/button/send_over.png");
+  downSkin: Embed(source="../../rsrc/media/skins/button/send_down.png");
+}
+
 .friendList {
   borderColor: #408fd9;
   borderSides: "left right";
