First pass at Annie's template

--- a/rsrc/email/shareInvite.tmpl
+++ b/rsrc/email/shareInvite.tmpl
@@ -1,7 +1,17 @@
-Email subject
-## TODO: Handle guests
-Your buddy ${name} wants you to check out ${link}.
+## TODO: Handle guests sending 
+${name} wants you to see this Whirled room
+Hi,
+
+I want to share this Whirled room with you. You should come visit  it:
+
+${link}
+(If this link doesn't work, try copying and pasting it from this email 
+ into your browser's address bar.)
 
 #if (${message})
 "${message}"
+
 #end
+Hope you like it!
+
+-- ${name}
