CSS doesn't use commas.

--- a/pages/css/msgs.css
+++ b/pages/css/msgs.css
@@ -164,7 +164,7 @@
 .issueSummaryPanel .Created {
   width: 150px;
   font-size: 12px;
-  padding: 2px, 0px;
+  padding: 2px 0px;
 }
 
 .issueMessageLink {
