Instead of making our invite URL hideously long and scaring our users, let's be clever and use the information that we already have to create a tracking cookie for a user that was invited by another user. GWT side forthcoming with other invitation related bits.

--- a/rsrc/email/memberInvite.tmpl
+++ b/rsrc/email/memberInvite.tmpl
@@ -14,7 +14,7 @@ ${friend} <${email}> sent you this invitation and said:
 #end
 Enter Whirled here:
 
-${server_url}/#me-i_${invite_id}_${referral_params}
+${server_url}/#me-i_${invite_id}
 
 -- The Keepers of the Peas
 
@@ -24,7 +24,7 @@ ${server_url}/#me-i_${invite_id}_${referral_params}
 If you would prefer not to receive invitations to Whirled from your friends,
 please visit this link:
 
-${server_url}/#account-optout_${invite_id}_${referral_params}
+${server_url}/#account-optout_${invite_id}
 #else
 This invitation is a result of this email address having been submitted at
 http://www.threerings.net/whirled/ for inclusion in Whirled testing. If you've
