No longer need RECAPTCHA bits substituted into index.html. We'll do it all programmatically now.

--- a/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
+++ b/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
@@ -25,4 +25,7 @@ public class DeploymentConfig
 
     /** Wheher we're running on dev or in production. */
     public static final boolean devDeployment = @dev_deployment@;
+
+    /** The public key for our RECAPTCHA service or "" if it's disabled. */
+    public static final String recaptchaPublic = "@recaptcha_public@";
 }
