--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -202,17 +202,21 @@
   padding-top: 10px;
   padding-right: 10px;
 }
-
-.passport .NextPanel .NextHeader {
+.passport .NextPanel .NextHeaderContent {
   background-image: url(/images/me/passport_header_tile.png);
   width: 100%;
   height: 27px;
 }
 
-.passport .NextPanel .NextHeaderContent {
-  width: 100%;
-}
-
 .passport .NextPanel .NextHeaderText {
   width: 100%;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  padding-left: 5px;
+}
+
+.passport .NextPanel .NextHeaderContent .gwt-Image {
+  padding-right: 5px;
+  padding-left: 5px;
 }
