Have GWT handle loading our style sheets and create modules for item, editem and msgs and have those bring along the stylesheets they need. So modular.

--- a/pages/css/frame.css
+++ b/pages/css/frame.css
@@ -4,6 +4,7 @@
  * CSS styles used by our top-level frame and header.
  */
 
+/** Our header styles. */
 .frameHeader {
   color: #EAEFF1;
   background: #000000;
