--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1159,7 +1159,7 @@ BasePanel {
 .gameChatContainer {
   backgroundColor: black;
   borderColor: #56C3E2;
-  borderSides: "left";
+  borderSides: "right";
   borderStyle: solid;
   borderThickness: 3;
 }
