--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -236,3 +236,14 @@
   padding-right: 3px;
   padding-left: 3px;
 }
+
+.passport .headerBox {
+  width: 673px;
+  padding-left: 5px;
+  padding-top: 10px;
+}
+
+.passport .Contents {
+  width: 100%;
+  min-height: 50px;
+}
