Some final tweaks to make the chat-on-left sidebar at least look better. - smaller gray separator. - put the scrollbars on the left. We're mad mad mad like that.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1158,10 +1158,10 @@ BasePanel {
 
 .gameChatContainer {
   backgroundColor: black;
-  borderColor: #56C3E2;
+  borderColor: #666666;
   borderSides: "right";
   borderStyle: solid;
-  borderThickness: 3;
+  borderThickness: 1;
 }
 
 .playerList {
