--- a/src/as/DecorViewer.mxml
+++ b/src/as/DecorViewer.mxml
@@ -18,7 +18,7 @@
 </mx:Metadata>
 <mx:Script>
     <![CDATA[
-        import com.threerings.msoy.world.client.DecorViewerComp;
+        import com.threerings.msoy.room.client.DecorViewerComp;
     ]]>
 </mx:Script>
 </mx:Application>
