Made the table title more visible

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1118,6 +1118,11 @@ BasePanel {
   color: #6A859A;
 }
 
+.tableTitleLabel {
+  fontWeight: bold;
+  color: black;
+}
+
 .createBtnBox {
   verticalAlign: middle;
   horizontalAlign: center;
