--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1189,6 +1189,12 @@ BasePanel {
   color: white;
 }
 
+.embedHeaderPlaceName {
+  fontWeight: bold;
+  fontSize: 12;
+  color: white;
+}
+
 .noPlaceView {
   backgroundColor: black;
 }
