Make our server URL available to Java code.

--- a/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
+++ b/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
@@ -17,6 +17,9 @@ public class DeploymentConfig
     /** The version number assigned to this build. */
     public static final String version = "@build_version@";
 
+    /** The URL from which we should make service requests. */
+    public static final String serverURL = "@server_url@";
+
     /** The URL via which we should load our media. */
     public static final String mediaURL = "@media_url@";
 
